--- a/discord_bot/configs.json
+++ b/discord_bot/configs.json
@@ -4,5 +4,6 @@
     ],
     "dm_channel": 753347715760521303,
     "token" : "token_bot",
-    "connection_string" : "connection string of db"
+    "connection_string" : "connection string of db",
+    "default_prefix": "--"
 }
