--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-async-timeout
+aiohttp
 asyncio
-discord.py
-discord
-pandas
-psycopg2
-stopwatch.py
-psutil
-requests
-python-dateutil
-py_expression_eval
-googletrans
-Pillow
+asyncpg
 currency-exchange
+discord.py
+googletrans
 jellyfish
+pandas
+pillow
+psutil
+py_expression_eval
+python-dateutil
+requests
+stopwatch.py
+testing.postgresql
