--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,19 @@ aiohttp==3.6.0
 asyncio
 asyncpg
 currency-exchange
-discord.py
 discord
+discord.py
+DiscordUtils@git+https://github.com/devRMA/DiscordUtils@master
 emojis
-twemoji-parser
 googletrans
 jellyfish
+jishaku@git+https://github.com/Gorialis/jishaku@master
 pandas
 pillow
 psutil
 py_expression_eval
 python-dateutil
 requests
-jishaku@git+https://github.com/Gorialis/jishaku@master
 stopwatch.py
 testing.postgresql
+twemoji-parser
