--- a/json/configs.json
+++ b/json/configs.json
@@ -87,6 +87,7 @@
         "streaming": "<:stream:768461948538454017>",
         "calculator": "<:calculator:757079712077053982>",
         "stop": "<:stop:784537453519831042>",
-        "red_arrow_left": "<:arrow_red:784543417668468756>"
+        "red_arrow_left": "<:arrow_red:784543417668468756>",
+        "hacking": "<a:rooHacker:785490491500003338>"
     }
 }
