--- a/json/configs.json
+++ b/json/configs.json
@@ -5,89 +5,5 @@
     "dm_channel": 753347715760521303,
     "token": "token_bot",
     "connection_string": "connection string of db",
-    "default_prefix": "--",
-    "emojis": {
-        "ids": {
-            "ativado": 755774682334101615,
-            "desativado": 755774682397147226,
-            "cadeado": 768871933202268212
-        },
-        "categories": {
-            "administração": "<:staffs:763807585174290452>",
-            "bot_info": "<:bot:763808270426177538>",
-            "diversão": "<a:loop_fun:763809373046702110>",
-            "info": "<:Info:756712227221930102>",
-            "matemática": "<:pi_emoji:763806073227575346>",
-            "owner": "<:dev_tag:763812174514487346>",
-            "úteis": "<a:disco:763811701589803098>",
-            "outros": "<:outro:763812448054018098>",
-            "personalizado": "<:gordin:763875622199623690>"
-        },
-        "dances": {
-            "pato": "<a:pato:755774683348992060>",
-            "parrot": "<a:parrot_dancando:755774679670718575>",
-            "doguinho2": "<a:doguinho2:755843996437446686>",
-            "dance_bear": "<a:dance_bear:755843929592692886>",
-            "whitewobble": "<a:whitewobble:755843847619346433>",
-            "wobble": "<a:wobble:755843848542093483>",
-            "wobble2": "<a:wobble2:755843848575647864>",
-            "wobbleblack": "<a:wobbleblack:755843848717991956>",
-            "wobblered": "<a:wobblered:755843848399225023>",
-            "aeeee": "<a:aeeee:755774677678555307>",
-            "bob": "<a:bob:755774679377117184>",
-            "cute_dance": "<a:cute_dance:755774679020601535>",
-            "cute_dance2": "<a:cute_dance2:755774678764617750>",
-            "maluko_dancando": "<a:maluko_dancando:755774681440583680>",
-            "mario_e_luigi": "<a:mario_e_luigi:755774681059033178>",
-            "penguim_doidao": "<a:penguim_doidao:755774679557603360>",
-            "pepo_dance": "<a:pepo_dance:755774680291344454>",
-            "SquidwardMilos": "<a:SquidwardMilos:755774682174586890>"
-        },
-        "ah_nao": "<:ah_nao:758003636822474887>",
-        "sad": "<a:sad:755774681008832623>",
-        "banned": "<a:banned:756138595882107002>",
-        "info": "<:Info:756712227221930102>",
-        "owner": "<:WumpusCrown:756712226978660392>",
-        "pizza": "<:WumpusPizza:756712226710356122>",
-        "database": "<:DatabaseCheck:756712226303508530>",
-        "loading": "<a:loading:756715436149702806>",
-        "python": "<:python:756712226210971660>",
-        "hello": "<a:hello:755774680949850173>",
-        "love": "<a:love:763523322675068958>",
-        "no_no": "<a:no_no:755774680325029889>",
-        "banido": "<a:banned:756138595882107002>",
-        "off": "<a:off:755774680660574268>",
-        "on": "<a:on:755774680580882562>",
-        "diminuiu": "<:diminuiu:730088971077681162>",
-        "aumentou": "<:aumentou:730088970779623524>",
-        "atencao": "<a:atencao:755844029333110815>",
-        "warning_flag": "<:warning:765612208629219358>",
-        "ativado": "<a:ativado:755774682334101615>",
-        "desativado": "<a:desativado:755774682397147226>",
-        "check_verde": "<a:check:755775267275931799>",
-        "cadeado": "<:trancar:768871933202268212>",
-        "boost": "<a:boost:767518522619985930>",
-        "nitro": "<a:nitro:767516060785311744>",
-        "disco": "<a:disco:763811701589803098>",
-        "loop_fun": "<a:loop_fun:763809373046702110>",
-        "staff_badge": "<:staff:767508404687863844>",
-        "parceiro_badge": "<:parceiro:767508978162073670>",
-        "hs_badge": "<:hypesquad:767509441926004746>",
-        "hs_bravery_badge": "<:hypesquad_bravery:767510882238333009>",
-        "hs_brilliance_badge": "<:hypesquad_brilliance:767511165173235763>",
-        "hs_balance_badge": "<:hypesquad_balance:767511585080999966>",
-        "early_supporter_badge": "<:early_supporter:767511883368366100>",
-        "bot_badge": "<:bot:763808270426177538>",
-        "bug_hunter_badge": "<:bug_hunter:767510394021216277>",
-        "dev_badge": "<:dev_tag:763812174514487346>",
-        "online": "<:online:768461948743843861>",
-        "dnd": "<:dnd:768461948928655381>",
-        "idle": "<:idle:768461949041246229>",
-        "offline": "<:offline:768461948790243349>",
-        "streaming": "<:stream:768461948538454017>",
-        "calculator": "<:calculator:757079712077053982>",
-        "stop": "<:stop:784537453519831042>",
-        "red_arrow_left": "<:arrow_red:784543417668468756>",
-        "hacking": "<a:rooHacker:785490491500003338>"
-    }
+    "default_prefix": "--"
 }
