--- a/json/configs.json
+++ b/json/configs.json
@@ -2,7 +2,9 @@
     "owners": [
         305532760083398657
     ],
-    "dm_channel": 753347715760521303,
+    "channels_log": {
+        "servers": 814539146843783188
+    },
     "token": "token_bot",
     "connection_string": "connection string of db",
     "default_prefix": "--"
