--- a/json/configs.json
+++ b/json/configs.json
@@ -2,8 +2,15 @@
     "owners": [
         305532760083398657
     ],
-    "channels_log": {
-        "servers": 814539146843783188
+    "webhooks": {
+        "server_logs": {
+            "id": WEBHOOK_SERVERLOGS_ID,
+            "token": "WEBHOOK_SERVERLOGS_TOKEN"
+        },
+        "owner_logs":{
+            "id": WEBHOOK_OWNER_ID,
+            "token": "WEBHOOK_OWNER_TOKEN"
+        }
     },
     "token": "token_bot",
     "connection_string": "connection string of db",
