atualização do .env.example para ter os dados para o banco de testes

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,6 +1,16 @@
-# O mesmo user que deve estar em /database_scripts/init.sql
+# Main databas
+DB_HOST=database
+DB_PORT=5432
+DB_NAME=androxus
 DB_USER=androxus
 DB_PASS=su4_s3nh4_f0rt3
 
-# Token do bot
+# Database for tests
+DB_TEST_HOST=database
+DB_TEST_NAME=androxus_test_db
+DB_TEST_PORT=5432
+DB_TEST_USER=androxus
+DB_TEST_PASS=su4_s3nh4_f0rt3
+
+# Bot token
 TOKEN=
