trocando o d.py pelo py-cord

--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,5 +1,5 @@
 python-dotenv
-discord.py@git+https://github.com/Rapptz/discord.py@master
+py-cord@git+https://github.com/Pycord-Development/pycord@master
 SQLAlchemy==1.4.23
 asyncpg==0.24.0
 colorama==0.4.4
