--- a/.env.exemple
+++ b/.env.exemple
@@ -15,5 +15,5 @@ DB_TEST_PASS=su4_s3nh4_f0rt3
 # Bot token
 TOKEN=
 
-# Ff every time the bot starts, it will try to run the tests
+# If every time the bot starts, it will try to run the tests
 DO_TESTS=true
