adição do id do dono, no .env

--- a/.env.exemple
+++ b/.env.exemple
@@ -14,6 +14,8 @@ DB_TEST_PASS=su4_s3nh4_f0rt3
 
 # Bot token
 TOKEN=
+# Your account ID
+OWNER_ID=1234
 
 # If every time the bot starts, it will try to run the tests
 DO_TESTS=true
