--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,5 +1,7 @@
 python-dotenv
 disnake@git+https://github.com/EQUENOS/disnake@master
+jishaku@git+https://github.com/Z1R343L/jishaku@master
 SQLAlchemy==1.4.23
 asyncpg==0.24.0
 colorama==0.4.4
+stopwatch.py==1.0.1
