adição de mais coisas no .env

--- a/.env.exemple
+++ b/.env.exemple
@@ -16,6 +16,10 @@ DB_TEST_PASS=su4_s3nh4_f0rt3
 TOKEN=
 # Your account ID
 OWNER_ID=1234
+# The ids of the servers you want to test the slash commands
+TEST_GUILDS=[123456789]
+# Default prefix for bot commands
+DEFAULT_PREFIX=an.
 
 # If every time the bot starts, it will try to run the tests
 DO_TESTS=true
