criação de novo env

--- a/.env.exemple
+++ b/.env.exemple
@@ -20,6 +20,8 @@ OWNER_ID=1234
 TEST_GUILDS=[123456789]
 # Default prefix for bot commands
 DEFAULT_PREFIX=an.
+# Default language for bot commands
+DEFAULT_LANGUAGE=pt_br
 
 # If every time the bot starts, it will try to run the tests
 DO_TESTS=true
