--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       OWNER_ID: "${OWNER_ID}"
       TEST_GUILDS: "${TEST_GUILDS}"
       DEFAULT_PREFIX: "${DEFAULT_PREFIX}"
+      DEFAULT_LANGUAGE: "${DEFAULT_LANGUAGE}"
       DB_HOST: "${DB_HOST}"
       DB_PORT: "${DB_PORT}"
       DB_NAME: "${DB_NAME}"
