alteração da lingua padrão

--- a/.env.exemple
+++ b/.env.exemple
@@ -21,7 +21,7 @@ TEST_GUILDS=[123456789]
 # Default prefix for bot commands
 DEFAULT_PREFIX=an.
 # Default language for bot commands
-DEFAULT_LANGUAGE=pt_br
+DEFAULT_LANGUAGE=en_us
 
 # If every time the bot starts, it will try to run the tests
 DO_TESTS=true
