atualização no .env

--- a/.env.exemple
+++ b/.env.exemple
@@ -17,11 +17,11 @@ TOKEN=
 # Your account ID
 OWNER_ID=1234
 # The ids of the servers you want to test the slash commands
-TEST_GUILDS=[123456789]
+TEST_GUILDS=[123, 321]
 # Default prefix for bot commands
 DEFAULT_PREFIX=an.
 # Default language for bot commands
 DEFAULT_LANGUAGE=en_us
 
-# If every time the bot starts, it will try to run the tests
-DO_TESTS=true
+# If true, before the bot starts, it will do the tests
+DEVELOPMENT=true
