alteração na localização do volume no container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     build: ./bot
     restart: unless-stopped
     volumes:
-      - ./bot:/usr/src/bot/
+      - ./bot:/usr/src/androxus/
     networks:
       - postgresql
       - redis
