erro de digitação na lingua padrão

--- a/.env.exemple
+++ b/.env.exemple
@@ -21,7 +21,7 @@ TEST_GUILDS=[123, 321]
 # Default prefix for bot commands
 DEFAULT_PREFIX=an.
 # Default language for bot commands
-DEFAULT_LANGUAGE=en_us
+DEFAULT_LANGUAGE=en_US
 
 # If true, before the bot starts, it will do the tests
 DEVELOPMENT=true
