--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -24,6 +24,7 @@ python = "^3.10"
 "flake8" = "^4.0.1"
 "types-toml" = "^0.10.3"
 "types-tabulate" = "^0.8.5"
+"isort" = "^5.10.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
