--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -25,6 +25,7 @@ python = "^3.10"
 "types-toml" = "^0.10.3"
 "types-tabulate" = "^0.8.5"
 "isort" = "^5.10.1"
+"sqlalchemy2-stubs" = "^0.0.2-alpha.19"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
