--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -34,7 +34,9 @@ COPY ./poetry.lock ./pyproject.toml /usr/src/androxus/
 
 # Project initialization
 RUN poetry config virtualenvs.create false; \
-    poetry install $(test "$DEVELOPMENT" == false && echo "--no-dev") --no-interaction --no-ansi; \
+    poetry install \
+    $(if [ "$DEVELOPMENT" = 'false' ]; then echo '--no-dev'; fi) \
+    --no-interaction --no-ansi; \
     poetry update;
 
 USER androxus
