--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -26,6 +26,7 @@ license = "MIT"
 "types-tabulate" = "^0.8.5"
 "isort" = "^5.10.1"
 "sqlalchemy2-stubs" = "^0.0.2-alpha.19"
+"taskipy" = "^1.9.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
