--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -31,3 +31,7 @@ license = "MIT"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
+py_version = "310"
