--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -35,3 +35,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.isort]
 profile = "black"
 py_version = "310"
+
+[tool.mypy]
+namespace_packages = "True"
+plugins = "sqlalchemy.ext.mypy.plugin"
