adição do types-colorama

--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -22,7 +22,8 @@ toml = "^0.10.2"
 ipython = "^7.30.1"
 mypy = "^0.931"
 flake8 = "^4.0.1"
-typestoml = "^0.10.3"
+types-colorama = "^0.4.8"
+types-toml = "^0.10.3"
 types-tabulate = "^0.8.5"
 isort = "^5.10.1"
 sqlalchemy2-stubs = "^0.0.2-alpha.19"
