--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -7,26 +7,26 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-asyncpg = "^0.25.0"
-colorama = "^0.4.4"
-"discord.py" = { git = "https://github.com/Rapptz/discord.py.git" }
-jishaku = "^2.3.2"
+asyncpg = "^0.26.0"
+colorama = "^0.4.5"
+"discord.py" = "^2.0.1"
+jishaku = "^2.5.1"
 python-dotenv = "^0.20.0"
 python-stopwatch2 = "^1.1.1"
-SQLAlchemy = "^1.4.28"
-tabulate = "^0.8.9"
+SQLAlchemy = "^1.4.40"
+tabulate = "^0.8.10"
 toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
-ipython = "^7.30.1"
-mypy = "^0.931"
-flake8 = "^4.0.1"
-types-colorama = "^0.4.8"
-types-toml = "^0.10.3"
-types-tabulate = "^0.8.5"
+ipython = "^8.4.0"
+mypy = "^0.971"
+flake8 = "^5.0.4"
+types-colorama = "^0.4.15"
+types-toml = "^0.10.8"
+types-tabulate = "^0.8.11"
 isort = "^5.10.1"
-sqlalchemy2-stubs = "^0.0.2-alpha.21"
-taskipy = "^1.9.0"
+sqlalchemy2-stubs = "^0.0.2-alpha.26"
+taskipy = "^1.10.2"
 yapf = "^0.32.0"
 
 [build-system]
