update python settings

--- a/bot/.vscode/settings.json
+++ b/bot/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-  "python.analysis.diagnosticSeverityOverrides": {
-    "reportMissingTypeStubs": "none"
-  }
+    "python.analysis.diagnosticSeverityOverrides": {
+        "reportMissingTypeStubs": "none"
+    },
+    "python.linting.flake8Enabled": true,
+    "python.linting.mypyEnabled": true,
+    "python.terminal.activateEnvInCurrentTerminal": true
 }
