set yapf to python formatter

--- a/bot/.vscode/settings.json
+++ b/bot/.vscode/settings.json
@@ -4,5 +4,6 @@
     },
     "python.linting.flake8Enabled": true,
     "python.linting.mypyEnabled": true,
-    "python.terminal.activateEnvInCurrentTerminal": true
+    "python.terminal.activateEnvInCurrentTerminal": true,
+    "python.formatting.provider": "yapf"
 }
